knative-build/runtimes/javascript/tests/error/payload-agnostic-bad-run-invalid-route.http
POST http://localhost:8080/bad HTTP/1.1
content-type: application/json

{
  "value": {
    "name" : "Bad",
    "place" : "POST"
  }
}

###